RectPainter.Desktop worked now

--- a/src/Avalonia.Samples/ViewInteraction/DialogManagerSample/App.axaml
+++ b/src/Avalonia.Samples/ViewInteraction/DialogManagerSample/App.axaml
@@ -1,8 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:DialogManagerSample"
-			 RequestedThemeVariant="Light"
-             x:Class="DialogManagerSample.App">
+			 x:Class="RectPainter.App"
+             RequestedThemeVariant="Default">
+             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.Styles>
         <FluentTheme />
