--- a/src/Avalonia.Samples/Drawing/RectPainter2/ReactiveUI/RectPainter/Views/MainWindow.axaml
+++ b/src/Avalonia.Samples/Drawing/RectPainter2/ReactiveUI/RectPainter/Views/MainWindow.axaml
@@ -1,12 +1,30 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:RectPainter.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="using:RectPainter.Controls"
+        xmlns:vm="using:RectPainter.ViewModels"
         xmlns:views="clr-namespace:RectPainter.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="RectPainter.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="RectPainter">
-        <views:MainView />
+        Title="Rect Painter Sample - Drag out rectangles with the mouse. Use Shift/Ctrl/Alt to change color"
+        Icon="/Assets/avalonia-logo.ico">
+    <Design.DataContext>
+        <vm:MainViewModel/>
+    </Design.DataContext>
+		
+    <Grid RowDefinitions="auto, *, auto">
+        <TextBlock Grid.Row="0" Text="Use mouse with Shift/Alt/Ctrl key modifiers pressed."/>
+
+        <Grid Grid.Row="1">
+            <controls:PaintControl DataContext="{Binding Vm}" />
+        </Grid>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <TextBlock Width="50" Text="Cursor:"/>
+            <TextBlock Width="120" Text="{Binding MousePosition}"/>
+            <TextBlock Width="70" Text="Rectangle:"/>
+            <TextBlock Width="100" Text="{Binding Rect}"/>
+        </StackPanel>
+    </Grid>
 </Window>
